--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@faker-js/faker": "^8.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.3.17",
+    "@viro-community/react-viro": "^2.23.0",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.0",
+    "expo-router": "2.0.5",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -27,8 +30,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.13.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
