Firebase integration & media file Uploader - Add Media uploader component - Integrate with firebase

--- a/app.json
+++ b/app.json
@@ -12,9 +12,7 @@
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -32,9 +30,15 @@
     "plugins": [
       "expo-router",
       [
-        "@viro-community/react-viro",
+        "expo-image-picker",
         {
-          "androidXrMode": ["GVR", "AR", "OVR_MOBILE"]
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
         }
       ]
     ],
