--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@react-navigation/stack": "^6.3.17",
     "@viro-community/react-viro": "^2.23.0",
     "expo": "~49.0.8",
+    "expo-av": "~13.4.1",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.5",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
