--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@faker-js/faker": "^8.0.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.17",
     "@viro-community/react-viro": "^2.23.0",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-av": "~13.4.1",
     "expo-font": "~11.4.0",
@@ -29,15 +31,19 @@
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.4.0",
+    "formik": "^2.4.4",
+    "jotai": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.13.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
-    "react-native-web": "~0.19.6"
+    "react-native-toast-message": "^2.1.6",
+    "react-native-web": "~0.19.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
