--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.17",
-    "@viro-community/react-viro": "^2.23.0",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-av": "~13.4.1",
@@ -33,6 +32,7 @@
     "firebase": "^10.4.0",
     "formik": "^2.4.4",
     "jotai": "^2.4.2",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
@@ -43,10 +43,13 @@
     "react-native-svg": "^13.13.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.19.6",
+    "react-query": "^3.39.3",
+    "rn-placeholder": "^3.0.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.198",
     "@types/react": "~18.2.14",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
