--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^10.4.0",
     "formik": "^2.4.4",
     "jotai": "^2.4.2",
+    "libphonenumber-js": "^1.10.47",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
